objects/Sprint__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>Sprints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FlowUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FlowUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sprint_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint Assignment</label>
        <referenceTo>Sprint_Master__c</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>Sprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint_Description__c</fullName>
        <formula>Sprint_Assignment__r.Sprint_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint_Group__c</fullName>
        <formula>text(Sprint_Assignment__r.Sprint_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint_Master_Name__c</fullName>
        <formula>Sprint_Assignment__r.Sprint_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint Master Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Leave blank to accept the Sprint Master Start and End Date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Pending Cancellation</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Scheduler__c</fullName>
        <label>Task Scheduler</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Use Task Scheduler</fullName>
                    <default>true</default>
                    <label>Use Task Scheduler</label>
                </value>
                <value>
                    <fullName>Assign all Tasks at Once</fullName>
                </value>
                <value>
                    <fullName>No Tasks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sprint</label>
    <nameField>
        <displayFormat>SA-{0000000}</displayFormat>
        <label>Sprint Assigned</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Use_Cancel_Button</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Status__c), TEXT(Status__c)="Cancelled", FlowUpdate__c=false, $Profile.Name&lt;&gt;"System Administrator")</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please use the "Cancel Sprint" button at the top of the page to cancel a Sprint for an account.</errorMessage>
    </validationRules>
</CustomObject>